Sequential image upload
